force-app/main/default/objects/SEG_ExcepcionesEmpresa__c/SEG_ExcepcionesEmpresa__c.object-meta.xml
<CustomObject>
    <description>Junction object con plantillas (NO excepciones) de SEGMENTOS.</description>
    <label>Plantillas Empresa</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ID Excepciones Empresa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plantillas Empresa</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>