force-app/main/default/objects/SEG_ExcepcionesEmpresa__c/fields/SEG_Empresa__c.field-meta.xml
<CustomField>
    <fullName>SEG_Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cliente, Cliente (Segmentos)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>SEG_Empresa</relationshipName>
    <type>Lookup</type>
</CustomField>